[package]
name = "pathfinder_canvas"
version = "0.5.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
description = "A GPU-accelerated vector graphics renderer that works like HTML canvas"
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/pathfinder"
homepage = "https://github.com/servo/pathfinder"
keywords = ["pathfinder", "canvas", "vector", "graphics", "gpu"]

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
font-kit = { version = "0.6", optional = true }

[dependencies.pathfinder_color]
path = "../color"
version = "0.5"

[dependencies.pathfinder_content]
path = "../content"
version = "0.5"

[dependencies.pathfinder_geometry]
path = "../geometry"
version = "0.5"

[dependencies.pathfinder_renderer]
path = "../renderer"
version = "0.5"

[dependencies.pathfinder_text]
path = "../text"
version = "0.5"
optional = true

[dependencies.skribo]
git = "https://github.com/errata-c/skribo.git"
rev = "21d997106891d430d364b5602c953ba385cf67fd" 
optional = true

[features]
pf-text = ["pathfinder_text", "skribo", "font-kit"]
