[package]
name = "pathfinder_text"
version = "0.5.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
description = "Text layout for the Pathfinder vector graphics renderer"
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/pathfinder"
homepage = "https://github.com/servo/pathfinder"

[dependencies]
font-kit = "0.6"

[dependencies.pathfinder_content]
path = "../content"
version = "0.5"

[dependencies.pathfinder_geometry]
path = "../geometry"
version = "0.5"

[dependencies.pathfinder_renderer]
path = "../renderer"
version = "0.5"

[dependencies.skribo]
git = "https://github.com/errata-c/skribo.git"
rev = "496b5e91e3e4b8556f0fe8bb6413e898438b4b9d" 
